# v1gaosi_cgg_python_ros

./: README.md  v1_gaosi_img_pose_flag.sh  v3_run_ros_gaosi_nodes.sh
src/gaosi_img_pose_flag/: CMakeLists.txt  package.xml
src/gaosi_img_pose_flag/msg/: PoseImgFlagMsg.msg
src/gaosi_img_pose_flag/src/: API_render.py  image_pose_flag_subscriber.cpp  image_pose_flag_subscriber（复件）.cpp  v1_image_pose_subscriber.py
src/gaosi_img_pose_flag/src/基本学习例子/: image_pose_flag_publisher.cpp  image_pose_publisher.py  image_pose_subscriber.py  v1_image_pose_flag_subscriber.cpp
备份包/image_gaosi/: CMakeLists.txt  package.xml
备份包/image_gaosi/src/: image_gps_subscriber.py  image_pose_publisher.cpp
备份包/image_gps_package/: CMakeLists.txt  package.xml
备份包/image_gps_package/src/: image_gps_publisher.cpp  image_gps_publisher（复件）.cpp  image_gps_subscriber.cpp
